<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.splash.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/dating"
        android:textColor="@color/main"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_heart"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_marginBottom="36dp"
        android:src="@drawable/heart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.dateforyou.best.utils.CustomEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/rounded_6_white"
        android:hint="@string/registration_email_hint_text"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:minHeight="43dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_40"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.dateforyou.best.utils.CustomEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/rounded_6_white"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="43dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_40"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <ImageView
        android:id="@+id/iv_register"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/registr"
        app:layout_constraintBottom_toTopOf="@id/iv_heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>